several uxwriter changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Dharma Labs - Desenvolvimento Web com Propósito | Sites, Sistemas e
+    <title>Dharma Labs - Tecnologia com Propósito | Sites, Sistemas e
       Apps</title>
     <meta name="description"
-      content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web, dashboards, apps mobile e automação. Tecnologia com propósito.">
+      content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web e dashboards. Tecnologia com Propósito.">
     <meta name="keywords"
-      content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, automação, IA, São José do Rio Preto, São Paulo">
+      content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, IA, São José do Rio Preto, São Paulo">
     <meta name="author" content="Dharma Labs">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title"
-      content="Dharma Labs - Desenvolvimento Web com Propósito">
+      content="Dharma Labs - Tecnologia com Propósito">
     <meta property="og:description"
-      content="Transformamos ideias em soluções digitais. Sites, sistemas, apps e automação.">
+      content="Transformamos suas ideias em soluções. Sites, sistemas e dashboards.">
     <meta property="og:image"
       content="./assets/images/logos/dharma-labs-main.svg">
     <meta property="og:url" content="https://dharmalabs.com.br">
@@ -57,7 +57,7 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Dharma Labs",
-    "description": "Desenvolvimento Web com Propósito",
+    "description": "Tecnologia com Propósito",
     "url": "https://dharmalabs.com.br",
     "logo": "https://dharmalabs.com.br/assets/images/logos/dharma-labs-main.svg",
     "contactPoint": {
@@ -106,8 +106,8 @@
               class="bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
             <a href="#servicos"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Serviços</a>
-            <a href="#produtos"
-              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Produtos</a>
+            <!-- <a href="#produtos"
+              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Produtos</a> -->
             <a href="#projetos"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Projetos</a>
             <a href="#contato"
@@ -141,8 +141,8 @@
               Ver Preços</a>
             <a href="#servicos"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Serviços</a>
-            <a href="#produtos"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Produtos</a>
+            <!-- <a href="#produtos"
+              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Produtos</a> -->
             <a href="#projetos"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Projetos</a>
             <a href="#contato"
@@ -193,13 +193,15 @@
 
           <!-- Main Headline -->
           <h1
-            class="text-5xl sm:text-6xl lg:text-7xl font-bold text-white mb-6">
-            Transforme Visitantes em <span class="gradient-text">Clientes
-              Reais</span>
+            class="text-4xl sm:text-6xl lg:text-7xl font-bold text-white mb-6">
+            Transformamos
+            suas ideias em <span
+              class="gradient-text">Soluções</span>
           </h1>
           <p
             class="text-xl sm:text-2xl text-gray-200 mb-8 max-w-4xl mx-auto leading-relaxed">
-            Sites que <strong>GARANTEM resultados</strong><br>
+            Sites, Sistemas e Dashboards que <strong>GARANTEM
+              resultados</strong><br>
             <span class="text-accent-400 font-semibold">A partir de R$ 750 +
               mensalidade de Netflix</span>
           </p>
@@ -269,13 +271,14 @@
               <div
                 class="absolute inset-0 bg-gradient-to-r from-accent-500 to-primary-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
             </a>
-            <a href="#produtos"
+            <!-- <a href="#produtos"
               class="group border-2 border-accent-400 text-accent-400 px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 hover:bg-accent-400 hover:text-primary-900 w-full sm:w-auto text-center relative overflow-hidden">
               <i class="fa-solid fa-rocket relative z-10"></i>
               <span class="relative z-10"> Ver Produtos</span>
               <div
-                class="absolute inset-0 bg-accent-400 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 origin-left"></div>
-            </a>
+                class="absolute inset-0 bg-accent-400 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 origin-left">
+              </div>
+            </a> -->
           </div>
         </div>
       </div>
@@ -373,7 +376,7 @@
                 <a href="precos.html#sites">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver preços
+                    Ver detalhes
                   </button>
                 </a>
               </div>
@@ -451,7 +454,7 @@
                 <a href="precos.html#sistemas">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver preços
+                    Ver detalhes
                   </button>
                 </a>
               </div>
@@ -524,7 +527,7 @@
                 <a href="precos.html#dashboards">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver preços
+                    Ver detalhes
                   </button>
                 </a>
               </div>
@@ -532,8 +535,10 @@
           </div>
         </div>
 
+        <hr class="border-t-4 border-primary-500 my-8" />
+
         <!-- Beneficios -->
-        <div class="text-center mb-10">
+        <div class="text-center mt-4 mb-10">
           <div
             class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
             <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
@@ -603,10 +608,10 @@
     </section>
 
     <!-- PRODUTOS DIGITAIS -->
-    <section id="produtos"
-      class="hero-bg py-20 lg:py-28 bg-gradient-to-br from-primary-900 via-primary-800 to-primary-900 text-white relative overflow-hidden">
-      <!-- Enhanced Background Pattern -->
-      <div class="absolute inset-0 opacity-10">
+    <!-- <section id="produtos"
+      class="hero-bg py-20 lg:py-28 bg-gradient-to-br from-primary-900 via-primary-800 to-primary-900 text-white relative overflow-hidden"> -->
+    <!-- Enhanced Background Pattern -->
+    <!-- <div class="absolute inset-0 opacity-10">
         <svg class="w-full h-full" viewBox="0 0 100 20"
           xmlns="http://www.w3.org/2000/svg">
           <defs>
@@ -618,9 +623,9 @@
           </defs>
           <rect width="100%" height="100%" fill="url(#grid)" />
         </svg>
-      </div>
+      </div> -->
 
-      <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+    <!-- <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
         <div class="text-center mb-16">
           <div
             class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
@@ -639,10 +644,8 @@
           </p>
         </div>
 
-        <!-- Produtos Grid -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-6xl mx-auto">
 
-          <!-- Bio Page -->
           <div
             class="bg-white rounded-3xl p-8 shadow-xl hover:shadow-2xl transition-all duration-500 border-l-4 border-accent-500 relative overflow-hidden">
             <div
@@ -657,7 +660,7 @@
               </div>
               <div>
                 <h3 class="text-2xl font-bold text-primary-900">BioCard</h3>
-                <p class="text-accent-600 font-medium">Sua BioPage
+                <p class="text-accent-600 font-medium">Sua BioCard
                   Brasileira</p>
               </div>
             </div>
@@ -693,20 +696,20 @@
                 </div>
                 <div class="text-xs text-gray-500">Interface visual</div>
               </div>
-            </div>
+            </div> -->
 
-            <!-- <button class="btn-secondary w-full text-primary-900" disabled>
+    <!-- <button class="btn-secondary w-full text-primary-900" disabled>
               <i class="fas fa-bell mr-2 text-primary-900"></i>
               Cadastrar para Early Access
             </button> -->
-            <div class="text-center text-gray-500 text-sm font-medium">
+    <!-- <div class="text-center text-gray-500 text-sm font-medium">
               <i class="fas fa-code mr-2"></i>
               Em desenvolvimento - Lançamento em breve
             </div>
-          </div>
+          </div> -->
 
-          <!-- Sistemas Web Modulares -->
-          <div
+    <!-- Sistemas Web Modulares -->
+    <!-- <div
             class="bg-white rounded-3xl p-8 shadow-xl hover:shadow-2xl transition-all duration-500 border-l-4 border-primary-500">
 
             <div class="flex items-center mb-6">
@@ -763,11 +766,13 @@
               class="btn-primary w-full text-center inline-block py-3 rounded-2xl font-semibold text-white no-underline">
               Agendar Consultoria Gratuita
             </a>
-          </div>
+          </div> -->
 
-        </div>
+    <!-- </div>
       </div>
-    </section>
+    </section> -->
+
+    <hr class="border-t-4 border-highlight-500 my-8" />
 
     <!-- Portfolio Preview Section -->
     <section id="projetos"
@@ -984,7 +989,7 @@
           </div>
 
           <!-- Trust Indicators -->
-          <div
+          <!-- <div
             class="grid grid-cols-3 md:grid-cols-3 gap-4 md:gap-8 text-center">
             <div class="p-3 md:p-6">
               <div
@@ -1004,7 +1009,7 @@
               <div class="text-primary-200 text-xs md:text-sm">Resposta (Dias
                 Úteis)</div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
