--- a/public/precos.html
+++ b/public/precos.html
@@ -571,8 +571,8 @@
                   <i class="fas fa-ticket-alt text-accent-400 mt-1"></i>
                   <div>
                     <span>Tickets mensais conforme plano</span>
-                    <p class="text-highlight-400 text-xs">Básico: 3 tickets |
-                      Pro: 5 tickets | Premium: 7 tickets</p>
+                    <p class="text-highlight-400 text-xs">Landing pages: 3 tickets |
+                      Site institucional: 5 tickets</p>
                   </div>
                 </div>
                 <div class="flex items-start space-x-3">
@@ -623,8 +623,7 @@
                   <i class="fas fa-clock text-accent-400 mt-1"></i>
                   <div>
                     <span>Horas mensais incluídas</span>
-                    <p class="text-primary-600 text-xs">Básico: 4h | Pro: 8h |
-                      Premium: 12h</p>
+                    <p class="text-primary-600 text-xs">Dashboards: 6h | Sistemas: 8h</p>
                   </div>
                 </div>
                 <div class="flex items-start space-x-3">
@@ -640,7 +639,7 @@
                   <div>
                     <span>Análises e relatórios</span>
                     <p class="text-primary-600 text-xs">Revisões de performance,
-                      recommendations</p>
+                      recomendações</p>
                   </div>
                 </div>
                 <div class="flex items-start space-x-3">
@@ -833,12 +832,12 @@
             <div class="px-8 pb-6 hidden faq-content" id="faq-1">
               <p class="text-gray-600 leading-relaxed mb-3">
                 <strong>Sites e Landing Pages:</strong> Sistema de tickets
-                mensais incluídos (3 a 7 por mês). Cada ticket serve para
+                mensais incluídos (3 para landing pages e 5 para sites institucionais). Cada ticket serve para
                 alterações de conteúdo, pequenos ajustes visuais ou correções.
               </p>
               <p class="text-gray-600 leading-relaxed">
                 <strong>Sistemas e Dashboards:</strong> Banco de horas mensais
-                incluídas (4 a 12 horas por mês). Ideal para manutenções mais
+                incluídas (6 para dashboards e 8 horas para sistemas). Ideal para manutenções mais
                 complexas, análises e ajustes técnicos. Correções de bugs são
                 sempre gratuitas e ilimitadas em ambos os casos.
               </p>
