corrections on pricing

--- a/public/precos.html
+++ b/public/precos.html
@@ -1082,7 +1082,7 @@
               <div
                 class="bg-white/20 backdrop-blur-sm rounded-2xl px-6 py-3 inline-block">
                 <span
-                  class="font-bold text-lg">contato@dharmalabs.com.br</span>
+                  class="font-bold text-sm md:text-lg">contato@dharmalabs.com.br</span>
               </div>
             </a>
           </div>
