--- a/public/index.html
+++ b/public/index.html
@@ -874,7 +874,7 @@
                 </div>
                 <h4 class="font-semibold text-lg mb-2">Você recebe</h4>
                 <p class="text-gray-300">Se fechar negócio, transferimos sua
-                  parte via PIX</p>
+                  parte via PIX em 7 dias após a entrega</p>
               </div>
             </div>
           </div>
@@ -964,8 +964,7 @@
               class="bg-white/10 backdrop-blur-sm rounded-xl p-4 border border-white/20 text-center">
               <h4 class="font-semibold text-white mb-2 text-sm"><i class="fa-solid fa-sack-dollar" style="color: #ffec3c !important;"></i> Como
                 recebo?</h4>
-              <p class="text-gray-100 text-xs">Via PIX quando o cliente pagar a
-                entrada.</p>
+              <p class="text-gray-100 text-xs">Via PIX, 7 dias após a entrega.</p>
             </div>
 
             <div
