changes on index

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
 
     <!-- SEO Meta Tags -->
     <title>Dharma Labs - Tecnologia com Propósito | Sites, Sistemas e
-      Apps</title>
+      Dashboards</title>
     <meta name="description"
       content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web e dashboards. Tecnologia com Propósito.">
     <meta name="keywords"
-      content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, IA, São José do Rio Preto, São Paulo">
+      content="desenvolvimento web, criação de sites, sistes, sistemas, sistemas web, dashboards, São José do Rio Preto, São Paulo">
     <meta name="author" content="Dharma Labs">
 
     <!-- Open Graph Meta Tags -->
@@ -383,7 +383,7 @@
                 <a href="precos.html#sites">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver detalhes
+                    Ver preços
                   </button>
                 </a>
               </div>
@@ -461,7 +461,7 @@
                 <a href="precos.html#sistemas">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver detalhes
+                    Ver preços
                   </button>
                 </a>
               </div>
@@ -534,7 +534,7 @@
                 <a href="precos.html#dashboards">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                    Ver detalhes
+                    Ver preços
                   </button>
                 </a>
               </div>
@@ -821,7 +821,7 @@
           <p
             class="text-xl sm:text-2xl text-gray-200 mb-8 max-w-3xl mx-auto leading-relaxed">
             Conhece alguém que precisa de um site? <br>
-            <span class="text-accent-400 font-bold">Indique para nós e ganhe uma
+            <span class="text-accent-500 font-bold">Indique para nós e ganhe uma
               comissão</span>
           </p>
         </div>
@@ -834,7 +834,7 @@
             class="bg-white/10 backdrop-blur-sm rounded-3xl p-8 border border-white/20">
             <div class="text-center text-white mb-8">
               <div
-                class="w-20 h-20 bg-gradient-to-r from-accent-500 to-accent-600 rounded-full flex items-center justify-center mx-auto mb-4">
+                class="w-20 h-20 bg-accent-500 rounded-full flex items-center justify-center mx-auto mb-4">
                 <i class="fas fa-handshake text-white text-2xl"></i>
               </div>
               <h3 class="text-2xl font-bold mb-4">É Simples Assim</h3>
@@ -938,7 +938,7 @@
 
             <div class="mt-8 text-gray-300">
               <p class="text-sm">
-                💡 <strong>Dica:</strong> Funciona melhor com pequenas empresas,
+                <i class="fa-solid fa-lightbulb" style="color: #e5ff00 !important;"></i> <strong>Dica:</strong> Funciona melhor com pequenas empresas,
                 profissionais liberais e empreendedores
               </p>
             </div>
@@ -969,7 +969,7 @@
 
             <div
               class="bg-white/10 backdrop-blur-sm rounded-xl p-4 border border-white/20 text-center">
-              <h4 class="font-semibold text-white mb-2 text-sm"><i class="fa-solid fa-address-book" style="color: #008cff !important;"></i> Preciso fazer
+              <h4 class="font-semibold text-white mb-2 text-sm"><i class="fa-solid fa-address-book" style="color: #fdff87 !important;"></i> Preciso fazer
                 algo?</h4>
               <p class="text-gray-100 text-xs">Só mandar o contato! Nós cuidamos
                 do resto.</p>
