--- a/public/index.html
+++ b/public/index.html
@@ -531,7 +531,7 @@
                   </div>
                 </div>
 
-                <a href="precos.html#dashboards">
+                <a href="precos.html#pricing-content#dashboards">
                   <button
                     class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                     Ver preços
