update button styles for mobile menu, add navigation link to home in planos.html, and enhance dark mode toggle functionality with localStorage support

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
             </nav>
 
             <!-- Mobile Menu Button -->
-            <button class="md:hidden text-gray-700 hover:text-primary-700"
+            <button class="md:hidden text-white hover:text-primary-700"
               id="mobile-menu-btn">
               <svg class="w-6 h-6" fill="none" stroke="currentColor"
                 viewBox="0 0 24 24">
