--- a/public/planos.html
+++ b/public/planos.html
@@ -80,7 +80,7 @@
             </nav>
 
             <!-- Mobile Menu Button -->
-            <button class="md:hidden text-gray-700 hover:text-primary-700"
+            <button class="md:hidden text-white hover:text-primary-700"
               id="mobile-menu-btn">
               <svg class="w-6 h-6" fill="none" stroke="currentColor"
                 viewBox="0 0 24 24">
@@ -1806,6 +1806,8 @@
           <div class="flex-1">
             <h4 class="font-bold mb-4 text-white">Navegação</h4>
             <ul class="space-y-2 text-primary-200 text-sm">
+              <li><a href="#hero"
+                  class="hover:text-accent-400 transition">Home</a></li>
               <li>
                 <a href="planos.html"
                   class="inline-block bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
