update Open Graph image in index.html to use new logo

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description"
       content="Transformamos suas ideias em soluções. Sites, sistemas e dashboards.">
     <meta property="og:image"
-      content="./assets/images/logos/dharma-labs-main.svg">
+      content="./assets/images/logos/logo.png">
     <meta property="og:url" content="https://dharmalabs.com.br">
     <meta property="og:type" content="website">
 
